--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,7 +41,14 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - assets/images/pool.jpg
+    - assets/images/beach.jpg
+    - assets/images/Budapest.jpg
+    - assets/images/hotel.jpg
+    - assets/images/hotel2.jpg
+    - assets/images/hotel3.jpg
+
   #  - images/a_dot_burr.jpeg
   #  - images/a_dot_ham.jpeg
 
